@@ -329,11 +329,24 @@
 #                    to the application during ACCEPT and how they will be
 #                    handled
 #             Type:  int (by bits)
-#          Default:  0
-#             Note:  0 disables the mouse cursor, any other value enables it
+#          Default:  1
+#             Note:  0 disables the mouse cursor, any other value enables it,
+#                    any value containing 1 will enable internal handling (click
+#                    to position, double-click to enter).
 #                    See copy/screenio.cpy for list of events and their values.
+#            Alias:  MOUSE_FLAGS
 #          Example:  11 (enable internal handling => 1, left press => 2,
 #                        double-click => 8; 1+2+8=11)
+
+# Environment name:  COB_MOUSE_INTERVAL
+#   Parameter name:  mouse_interval
+#          Purpose:  specifies the maximum time (in thousands of a second)
+#                    that can elapse between press and release events for them
+#                    to be recognized as a click.
+#             Type:  int (0 - 166)
+#          Default:  100
+#             Note:  0 disables the click resolution (instead press + release
+#                    are recognized), also disables positioning by mouse click
 
 # Environment name:  COB_DISPLAY_PRINT_PIPE
 #   Parameter name:  display_print_pipe
