@@ -197,6 +197,7 @@
 #define	COB_INSERT_MODE		cobsetptr->cob_insert_mode
 #define	COB_EXTENDED_STATUS	cobsetptr->cob_extended_status
 #define	COB_MOUSE_FLAGS	cobsetptr->cob_mouse_flags
+#define	COB_MOUSE_INTERVAL	cobsetptr->cob_mouse_interval
 #define	COB_USE_ESC		cobsetptr->cob_use_esc
 
 #ifdef __cplusplus
@@ -255,6 +256,7 @@ typedef struct __cob_settings {
 	unsigned int	cob_beep_value;		/* Bell disposition */
 	unsigned int	cob_extended_status;	/* Extended status */
 	unsigned int	cob_mouse_flags;	/* Mouse flags to mask to COBOL, values according to ACUCOBOL */
+	unsigned int	cob_mouse_interval;		/* time to recognize a click, 0 = click resolution disabled */
 	unsigned int	cob_use_esc;		/* Check ESC key */
 	unsigned int	cob_timeout_scale;	/* timeout scale */
 	unsigned int	cob_insert_mode;	/* insert toggle, 0=off, 1=on */
